--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,9 @@ addons:
       - scons
 
 script: scons test
+
+
+before_install:
+  - pip install --user codecov
+after_success:
+  - codecov --file coverage/lcov.info --disable search
